Layout bugs

--- a/src/css/story/part-1.styl
+++ b/src/css/story/part-1.styl
@@ -135,11 +135,13 @@
       font-weight 600
 
     ul
-      padding 0 1rem
+      padding 1rem 1rem 0.5rem
       margin-left 0.75rem
       line-height 1.25
-      margin-top 2rem
-      margin-bottom 2rem
+      margin-top 1rem
+      margin-bottom 1rem
+      border-top 1px solid #fde9de
+      border-bottom 1px solid #fde9de
       li
         margin-left 1rem
         padding-left 0
@@ -167,6 +169,11 @@
     .bipoc-bipoc
       .bipoc-title
         border-bottom 0.25rem solid #894f29
+    .bipoc-list
+      margin-left 0
+      li
+        padding-left 0
+        margin-bottom 0.5rem
 .part1-conclusion ul li.check::before {
   content: '✅';
   font-size: 0.8rem;
